# the-ai-repo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: _base.yaml
configs/audio/: asr.yaml
configs/cv/: image_analysis_cls.yaml  image_analysis_det.yaml  image_analysis_pose.yaml  image_analysis_seg.yaml  reid.yaml  search.yaml  train.yaml  video_analysis.yaml
configs/nlp/: rag.yaml
configs/slm/: qwen05b_dpo_fast_dora.yaml  qwen05b_dpo_fast_plain.yaml  qwen05b_kto_fast_dora.yaml  qwen05b_kto_fast_plain.yaml  qwen05b_lora_fast.yaml  qwen05b_lora_fast_dora.yaml  qwen05b_lora_fast_dora_kl.yaml  qwen05b_lora_fast_kl.yaml  qwen05b_lora_fast_plain.yaml  qwen05b_lora_long.yaml  qwen05b_lora_reg.yaml  qwen05b_orpo_fast_dora.yaml  qwen05b_orpo_fast_plain.yaml
configs/ts/: forecast.yaml
documentation/: APPLIED_AI_LORA.md  APPLIED_CV.md  APPLIED_CV_FINETUNING.md  APPLIED_CV_IMAGES.md  APPLIED_CV_REID.md  APPLIED_CV_SEARCH.md  CNN_AND_MLP.md  FOUNDATIONS_ROADMAP.md  GENERATIVE.md  LLM_SYSTEMIZATION.md  NN_README.md  RNN_LSTM_GRU.md  TRANSFORMER.md  UNSUPERVISED.md
outputs/: bpe.json
scripts/: rag_eval_demo.py  run_gmm.py  run_kmeans.py  run_knn.py  run_linreg.py  run_logreg.py  run_naive_bayes.py  run_pca.py  run_random_forest.py  run_ridge_lasso.py  serve_openai_compat.py  sft_compare_generate.py  sft_eval_toy.py  train_ae_mnist.py  train_bpe.py  train_char_rnn.py  train_cnn_mnist.py  train_gpt_tiny.py  train_mlp_torch.py  train_resnet18_transfer.py
scripts/audio/: summarize_dir.py  transcribe_dir.py
scripts/classic/: run_knn.py  run_linreg.py  run_logreg.py  run_naive_bayes.py  run_random_forest.py  run_ridge_lasso.py  run_softmax.py
scripts/cv/: build_graphics.py  render_recap.py  run_image_analysis.py  run_video_analysis.py
scripts/cv/al/: auto_label_images.py  auto_label_videos.py
scripts/cv/reid/: associate_tracks.py  attach_global_ids.py  build_cross_video_flows.py  build_galleries.py  build_track_embeddings.py
scripts/cv/search/: index_crops.py  index_frames.py  query_search.py
scripts/cv/train/: eval_yolo.py  train_yolo.py
scripts/datatransform/: build_dpo_pairs_from_chatml.py  build_markdown_slice.py  make_neg_guard.py  pack_mix_chatml.py
scripts/dl/: train_char_rnn.py  train_mlp_torch.py
scripts/eval/: style_eval.py
scripts/export/: export_merged_qwen05b.py
scripts/generative/: train_ae_mnist.py  train_ddpm_mini.py  train_vae_mnist.py
scripts/nlp/: index_docs.py  query_rag.py
scripts/optimizers/: optimizers_lab.py
scripts/rag/: rag_eval_demo.py
scripts/rl/: run_gridworld_vi.py  run_q_learning.py
scripts/seq2seq/: train_seq2seq_reverse.py
scripts/server/: server_openai_compat.py
scripts/sft/: sft_compare_generate.py  sft_eval_toy.py  train_sft_lora.py
scripts/slm/: qwen05b_compare.py  qwen05b_dpo_train.py  qwen05b_kto_train.py  qwen05b_lora_infer.py  qwen05b_lora_merge.py  qwen05b_lora_train.py  qwen05b_lora_train_slim.py  qwen05b_orpo_train.py  qwen05b_perplexity.py  train_tinygpt_openweb.py
scripts/transformers/: train_bpe.py  train_gpt_tiny.py
scripts/ts/: anomaly_csv.py  forecast_csv.py
scripts/unsupervised/: run_gmm.py  run_kmeans.py  run_pca.py
scripts/vision/: train_cnn_mnist.py  train_resnet18_transfer.py
servers/applied_ai/: Dockerfile  app.py
src/airepo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/airoad/: __init__.py
src/airoad/audio/: asr.py  stitch.py  summarize.py  vad.py
src/airoad/core/: __init__.py  device.py  index_store.py  io.py  manifest.py  timers.py  viz.py
src/airoad/cv/: image_analysis.py  video_analysis.py
src/airoad/datasets/: toy.py
src/airoad/dl/: char_data.py  char_rnn.py  mlp_torch.py
src/airoad/generative/: ae.py  ddpm_mini.py  vae.py
src/airoad/models/: gmm.py  knn.py  linreg_numpy.py  naive_bayes.py  random_forest.py  ridge_lasso.py  softmax_numpy.py
src/airoad/nlp/: chunk.py  embed.py  eval_rag.py  ingest.py  rag.py
src/airoad/optimizers/: optimizers.py
src/airoad/rag/: eval.py
src/airoad/reid/: backbone.py  embedder.py  matcher.py
src/airoad/rl/: gridworld.py  q_learning.py  value_iteration.py
src/airoad/search/: backbone.py  indexer.py
src/airoad/seq2seq/: attn_seq2seq.py
src/airoad/sft/: callbacks.py  data.py  eval_sft.py  infer.py  lora.py  lora_sft.py  metrics.py  pref_data.py  pref_trainers.py  (+1 more)
src/utils/: device.py
tests/: test_ae_vae_ddpm.py  test_bpe.py  test_char_models.py  test_cnn_shapes.py  test_gmm_nmi.py  test_imports.py  test_kmeans.py  test_knn.py  test_linear_svm.py  test_linreg_grad.py  test_logreg_perf.py  test_mlp_torch.py  test_naive_bayes.py  test_optimizers.py  test_pca.py  test_rag_eval_metrics.py  test_random_forest.py  test_resnet_transfer_shapes.py  test_ridge_lasso.py  test_rl_q_learning.py  test_rl_value_iteration.py  test_seq2seq_tiny.py  test_sft_eval_metrics.py  test_sft_prep.py  test_smoke_env.py  test_softmax.py  test_tree_gini.py
tests/smoke/: test_audio_smoke.py  test_core_smokes.py  test_nlp_rag_smoke.py  test_timeseries_smoke.py
(+24 files in other folders)
