[project]
name = "airepo"                 # dist name can stay "airepo"; it doesn't need to match import name
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Aaron Schlenker", email = "aschlenk3@gmail.com" }]
requires-python = ">=3.11"

# --- runtime deps ---
dependencies = [
  "accelerate>=1.11.0",
  "cv>=1.0.0",
  "datasets>=2.19.0", # <-- fix: 'datasets' is 2.x, not 4.x
  "evaluate>=0.4.6",
  "faiss-cpu>=1.12.0",
  "fastapi>=0.121.0",
  "hydra-core>=1.3.2",
  "matplotlib>=3.10.7",
  "omegaconf>=2.3.0",
  "open-clip-torch>=3.2.0",
  "pip>=25.3",
  "pydantic>=2.12.3",
  "python-multipart>=0.0.20",
  "rich>=14.2.0",
  "torch>=2.9.0",
  "torchaudio>=2.9.0",
  "torchvision>=0.24.0",
  "transformers>=4.57.1",
  "typer>=0.20.0",
  "ultralytics>=8.3.225",
  "uvicorn>=0.38.0",
]

[project.optional-dependencies]
rag = ["faiss-cpu>=1.8.0", "sentence-transformers>=3.0.0"]
llm = [
  "torch>=2.3.0",          # MPS wheels are on PyPI; uv will fetch the right macOS/arm64 build
  "torchvision>=0.18.0",
  "torchaudio>=2.3.0",
  "transformers>=4.44.0",
  "datasets>=2.20.0",
  "peft>=0.11.0",
  "accelerate>=0.33.0",
  "sentencepiece>=0.2.0",
  "evaluate>=0.4.1",
  # optional but handy:
  "wandb>=0.17.0",
  # if you use TRL SFTTrainer in the script (we try it first and fall back if missing):
  "trl>=0.9.6",
]
# ^ removed the accidental third-party "llm" and the confusing "sentence-transformers" extra group

[dependency-groups]
cv = [
    "open-clip-torch>=2.24.0",
]
dev  = ["ipykernel>=7.1.0", "jupyterlab>=4.4.10", "pre-commit>=4.3.0", "pytest>=8.4.2"]
lint = ["black>=25.9.0", "isort>=7.0.0", "nbqa>=1.9.1", "ruff>=0.14.3"]

# --- build backend: setuptools with src/ discovery ---
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["airoad*"]           # <-- discover your package under src/airoad

[tool.setuptools.package-data]
airoad = ["py.typed"]

[tool.uv]
# put the virtualenv inside the repo (nice for CI and isolation)
package = true

# --- isort configuration (shared by local + CI) ---
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
src_paths = ["src", "scripts"]
known_first_party = ["airoad"]
